# ClaudeBar

./: .gitignore  LICENSE  README.md  index.html  install.ps1  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.ts  provider.test.ts  provider.ts  styles.css  theme.test.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  claude_api.rs  codex.rs  cost.rs  credentials.rs  lib.rs  main.rs  model.rs  pricing.rs  tray_icon.rs  vscdb.rs
src-tauri/tests/fixtures/: sample.vscdb
web/: index.html  robots.txt  sitemap.xml  styles.css
